--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-PyMongo==2.3.0
 Flask-Testing==0.8.0
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
